--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -714,6 +714,7 @@ button:hover::before{
     overflow: hidden;
     box-shadow: 0 25px 50px rgba(0,0,0,0.1);
     border-radius: 3rem;
+    cursor: pointer;
 }
 
 .blog .content .card:nth-child(2), 
