--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,66 +532,15 @@ button:hover::before{
     margin-bottom: var(--m-5-2);
 }
 
-.about .container .skills .skill_bars li{
-    position: relative;
-    font-size: var(--fs-1-3-5);
-    color: var(--primary-color);
-    font-weight: var(--fw-600);
-    line-height: 4.2;
-    margin-bottom: var(--m-0-8);
-}
+.about .container .skills .skill_bars{
+    display: flex;
 
-.about .container .skills .skill_bars li::before{
-    content:'';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 0.8rem;
-    background: rgba(0,0,0,0.1);
-    border-radius: 0.6rem;
 }
+.about .container .skills .skill_bars p{
 
-.about .container .skills .skill_bars li::after{
-    content:'';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 0.8rem;
-    background: var(--primary);
-    border-radius: 0.6rem;
-    animation: skills 12s linear 1;
-    animation-delay: calc(0.5s * var(--i));
-    animation-fill-mode: forwards;
 }
+.about .container .skills .skill_bars i{
 
-@keyframes skills {
-    0%{
-        width: 0;
-    }
-    100%{
-        width: 100%;
-    }
-}
-
-.about .container .skills .skill_bars li:nth-child(1)::after{
-    max-width: 70%;
-}
-.about .container .skills .skill_bars li:nth-child(2)::after{
-    max-width: 50%;
-}
-.about .container .skills .skill_bars li:nth-child(3)::after{
-    max-width: 20%;
-}
-.about .container .skills .skill_bars li:nth-child(4)::after{
-    max-width: 90%;
-}
-.about .container .skills .skill_bars li:nth-child(5)::after{
-    max-width: 50%;
-}
-.about .container .skills .skill_bars li:nth-child(6)::after{
-    max-width: 60%;
 }
 
 .service{
