--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,7 @@ body.activeNavMenu{
     --fs-3-5: 3.5rem;
     --fs-3-6: 3.6rem;
     --fs-4-5: 4.5rem;
+    --fs-7-8: 7.8rem;
     --fs-11-5: 11.5rem;
 
     /* Margin  */
@@ -534,14 +535,25 @@ button:hover::before{
 
 .about .container .skills .skill_bars{
     display: flex;
-
+    gap: 35px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.about .container .skills .skill_bars .progress_bar{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
 }
 .about .container .skills .skill_bars p{
-
+    text-align: center;
 }
-.about .container .skills .skill_bars i{
-
+.about .container .skills .skill_bars .icons{
+    font-size: var(--fs-7-8);
 }
+
 
 .service{
     padding: calc(8vw + 2.5rem) 0 var(--p-7);
